# Tasks-management-system

./: README.md  compose.yaml
backend/: .gitignore  compose.yaml  dockerfile  pyproject.toml  requirements.txt
backend/app/api/: main.py
backend/app/api/routers/: auth.py  task.py  user.py
backend/app/core/: deps.py  security.py
backend/app/crud/: task.py  user.py
backend/app/db/: base.py  session.py
backend/app/models/: task.py  user.py
backend/app/schemas/: task.py  user.py
frontend/: .dockerignore  Dockerfile  README.md  next.config.js  package.json  tailwind.config.js
frontend/app/: layout.tsx  page.tsx
frontend/components/auth/: login-form.tsx  register-form.tsx
frontend/components/tasks/: task-form.tsx  task-list.tsx
frontend/lib/: api.ts
frontend/types/: task.ts
